manifest/gateway_api/http_route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: myapp-http-route
  namespace: kong
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong # this is the name of the gateway we are using
      namespace: kong
  hostnames:
    - myapp.com # this is the hostname we are using
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui
      backendRefs:
        - name: myapp-service
          namespace: default
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /ui2
      backendRefs:
        - name: myapp2-service
          namespace: default
          port: 8080
